General UI cleanup. Fixed spacing. Fixed some stuff in venture demo

--- a/webui/packages/eidolon-components/src/messages/eidolon-markdown.css
+++ b/webui/packages/eidolon-components/src/messages/eidolon-markdown.css
@@ -52,3 +52,7 @@
 .markdown tbody tr:last-child td:last-child {
     border-bottom-right-radius: .375rem
 }
+
+.markdown ul > li {
+    margin-left: 24px;
+}
